🔨 refactor: 컨트롤러 구조 단순화 및 쿠키 AT/RT 저장